--- a/notebooks/dataset_ds.ipynb
+++ b/notebooks/dataset_ds.ipynb
@@ -5,7 +5,7 @@
    "id": "0",
    "metadata": {},
    "source": [
-    "## Data Owner Creates Dataset"
+    "## Data Scientist"
    ]
   },
   {
@@ -18,7 +18,11 @@
     "from syft_rds.client.rds_client import init_session\n",
     "\n",
     "HOST_EMAIL = \"khoa@openmined.org\"\n",
-    "rds_client = init_session(HOST_EMAIL)"
+    "rds_client = init_session(HOST_EMAIL)\n",
+    "\n",
+    "print(f\"host: {rds_client.host}\")\n",
+    "print(f\"me: {rds_client.email}\")\n",
+    "print(f\"is admin?: {rds_client.is_admin}\")"
    ]
   },
   {
@@ -28,19 +32,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"host: {rds_client.host}\")\n",
-    "print(f\"me: {rds_client.email}\")\n",
-    "print(f\"is admin?: {rds_client.is_admin}\")"
+    "datasets = rds_client.dataset.get_all()\n",
+    "datasets"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "3",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "rds_client.dataset.get_all()"
+    "### Exploring the first dataset"
    ]
   },
   {
@@ -49,7 +50,10 @@
    "id": "4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "med_mnist = rds_client.dataset.get(\"MedMNIST\")\n",
+    "med_mnist"
+   ]
   },
   {
    "cell_type": "code",
@@ -58,15 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exactly the same API as in User flow.ipynb\n",
-    "data = rds_client.dataset.create(\n",
-    "    name=\"dkCensus\",  # MUST BE UNIQUE. Throw Exception if already exist.\n",
-    "    path=\"./data/census/private.csv\",  # MUST EXIST\n",
-    "    mock_path=\"./data/census/mock.csv\",\n",
-    "    file_type=\"csv\",\n",
-    "    summary=\"Sample census dataset, 10 rows for mock and 10 rows for private\",\n",
-    "    description_path=\"./data/census/README.md\",\n",
-    ")"
+    "med_mnist.readme()"
    ]
   },
   {
@@ -76,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data"
+    "med_mnist.describe()"
    ]
   },
   {
@@ -85,7 +81,9 @@
    "id": "7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "med_mnist.get_mock_path()"
+   ]
   },
   {
    "cell_type": "code",
@@ -94,8 +92,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "census_data = rds_client.dataset.get(\"dkCensus\")\n",
-    "census_data"
+    "# will raise error\n",
+    "med_mnist.get_private_path()"
    ]
   },
   {
@@ -105,8 +103,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"{census_data.name = }\")\n",
-    "print(f\"{census_data.description_path = }\")"
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from PIL import Image\n",
+    "\n",
+    "im_path = med_mnist.get_mock_path() / \"test\" / \"CXR\" / \"000001.jpeg\"\n",
+    "img = np.asarray(Image.open(im_path))\n",
+    "plt.imshow(img)"
    ]
   },
   {
@@ -115,9 +118,7 @@
    "id": "10",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "census_data.describe()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -125,18 +126,14 @@
    "id": "11",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "census_data.get_mock_path()"
-   ]
+   "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "12",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "census_data.get_private_path()"
+    "### Exploring the second dataset"
    ]
   },
   {
@@ -145,7 +142,10 @@
    "id": "13",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "census = rds_client.dataset.get(\"Census\")\n",
+    "census"
+   ]
   },
   {
    "cell_type": "code",
@@ -154,14 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data2 = rds_client.dataset.create(\n",
-    "    name=\"dk_med_MNIST\",  # MUST BE UNIQUE. Throw Exception if already exist.\n",
-    "    path=\"./data/med_MNIST/private\",  # MUST EXIST\n",
-    "    mock_path=\"./data/med_MNIST/mock\",\n",
-    "    file_type=\"jpeg\",\n",
-    "    summary=\"Sample Medical MNIST dataset, 5 images for each class\",\n",
-    "    description_path=\"./data/med_MNIST/README.md\",\n",
-    ")"
+    "census.readme()"
    ]
   },
   {
@@ -171,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data2"
+    "census.describe()"
    ]
   },
   {
@@ -181,8 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "medMnist_data = rds_client.dataset.get(\"dk_med_MNIST\")\n",
-    "medMnist_data"
+    "census.get_mock_path()"
    ]
   },
   {
@@ -192,8 +184,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"{medMnist_data.name = }\")\n",
-    "print(f\"{medMnist_data.description_path = }\")"
+    "import pandas as pd\n",
+    "\n",
+    "pd.read_csv(census.get_mock_path())"
    ]
   },
   {
@@ -203,7 +196,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "medMnist_data.describe()"
+    "# will raise error\n",
+    "census.get_private_path()"
    ]
   },
   {
@@ -228,9 +222,7 @@
    "id": "21",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "rds_client.dataset.delete(name=\"dkCensus\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -238,143 +230,12 @@
    "id": "22",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "rds_client.dataset.delete(name=\"dk_med_MNIST\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "23",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "24",
-   "metadata": {},
-   "source": [
-    "## Data Scientist"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from syft_rds.client.rds_client import init_session\n",
-    "\n",
-    "HOST_EMAIL = \"khoa2@openmined.org\"\n",
-    "rds_client = init_session(HOST_EMAIL)\n",
-    "\n",
-    "print(f\"host: {rds_client.host}\")\n",
-    "print(f\"me: {rds_client.email}\")\n",
-    "print(f\"is admin?: {rds_client.is_admin}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "26",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rds_client.dataset.get_all()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "census_data = rds_client.dataset.get(\"Census\")\n",
-    "census_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "census_data.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "pd.read_csv(census_data.mock)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "medMnist_data = rds_client.dataset.get(\"med_MNIST\")\n",
-    "medMnist_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "medMnist_data.mock"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "35",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": []
