--- a/notebooks/dataset_do.ipynb
+++ b/notebooks/dataset_do.ipynb
@@ -113,8 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"{census_data.name = }\")\n",
-    "print(f\"{census_data.description_path = }\")"
+    "print(f\"{census_data.name = }\")"
    ]
   },
   {
@@ -124,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "census_data.describe()"
+    "census_data.get_mock_path()"
    ]
   },
   {
@@ -134,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "census_data.get_mock_path()"
+    "census_data.get_private_path()"
    ]
   },
   {
@@ -144,12 +143,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "census_data.get_private_path()"
+    "import pandas as pd\n",
+    "\n",
+    "pd.read_csv(census_data.get_private_path())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "census_data.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "census_data.get_readme_path()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "14",
    "metadata": {},
    "source": [
     "### Second Dataset"
@@ -158,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,23 +190,14 @@
     "    file_type=\"jpeg\",\n",
     "    summary=\"Sample Medical MNIST dataset, 5 images for each class\",\n",
     "    description_path=\"./data/med_MNIST/README.md\",\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ")\n",
     "data2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,22 +208,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f\"{medMnist_data.name = }\")\n",
-    "print(f\"{medMnist_data.description_path = }\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
-    "medMnist_data.describe()"
+    "print(f\"{medMnist_data.name = }\")\n",
+    "print(f\"{medMnist_data.summary = }\")"
    ]
   },
   {
@@ -221,7 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "medMnist_data.get_mock_path()"
+    "medMnist_data.describe()"
    ]
   },
   {
@@ -231,7 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "medMnist_data.get_private_path()"
+    "medMnist_data.get_mock_path()"
    ]
   },
   {
@@ -240,24 +242,34 @@
    "id": "20",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "21",
-   "metadata": {},
    "source": [
-    "### Delete Dataset"
+    "medMnist_data.get_private_path()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rds_client.dataset.delete(name=\"Census\")"
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from PIL import Image\n",
+    "\n",
+    "test_dir = medMnist_data.get_mock_path() / \"test\"\n",
+    "first_subdir = next(d for d in test_dir.iterdir() if d.is_dir())\n",
+    "first_jpeg = next(first_subdir.glob(\"*.jpeg\"))\n",
+    "img = np.asarray(Image.open(first_jpeg))\n",
+    "plt.imshow(img)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22",
+   "metadata": {},
+   "source": [
+    "### Delete Dataset"
    ]
   },
   {
@@ -267,7 +279,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rds_client.dataset.delete(name=\"MedMNIST\")"
+    "rds_client.dataset.delete(name=\"Census\")"
    ]
   },
   {
@@ -276,7 +288,9 @@
    "id": "24",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rds_client.dataset.delete(name=\"MedMNIST\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -314,6 +328,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "29",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": []
