--- a/notebooks/dataset_ds.ipynb
+++ b/notebooks/dataset_ds.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "from syft_rds.client.rds_client import init_session\n",
     "\n",
-    "HOST_EMAIL = \"khoa@openmined.org\"\n",
+    "HOST_EMAIL = \"khoa2@openmined.org\"\n",
     "rds_client = init_session(HOST_EMAIL)\n",
     "\n",
     "print(f\"host: {rds_client.host}\")\n",
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "med_mnist.readme()"
+    "med_mnist.describe()"
    ]
   },
   {
@@ -72,23 +72,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "med_mnist.describe()"
+    "med_mnist.get_readme_content()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "med_mnist.get_mock_path()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -123,14 +113,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "11",
    "metadata": {},
    "source": [
     "### Exploring the second dataset"
@@ -139,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,17 +140,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "census.readme()"
+    "census.get_readme_content()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,13 +182,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
     "# will raise error\n",
     "census.get_private_path()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -228,14 +226,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "22",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": []
