add `rds_client.datasets`. rename dataset's `get_readme_content` to `get_description`

--- a/notebooks/dataset_ds.ipynb
+++ b/notebooks/dataset_ds.ipynb
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "med_mnist.get_readme_content()"
+    "med_mnist.get_description()"
    ]
   },
   {
@@ -144,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "census.get_readme_content()"
+    "census.get_description()"
    ]
   },
   {
