--- a/notebooks/dataset_do.ipynb
+++ b/notebooks/dataset_do.ipynb
@@ -31,11 +31,13 @@
    "outputs": [],
    "source": [
     "HOST_EMAIL = \"khoa@openmined.org\"\n",
-    "rds_client = init_session(HOST_EMAIL)\n",
+    "CONFIG = \"~/.syftbox/config_stage.json\"\n",
+    "rds_client = init_session(HOST_EMAIL, syftbox_client_config_path=CONFIG)\n",
     "\n",
     "print(f\"host: {rds_client.host}\")\n",
     "print(f\"me: {rds_client.email}\")\n",
     "print(f\"is admin?: {rds_client.is_admin}\")\n",
+    "print(f\"server = {rds_client._syftbox_client.config.server_url}\")\n",
     "assert rds_client.is_admin"
    ]
   },
@@ -85,10 +87,9 @@
    "outputs": [],
    "source": [
     "data = rds_client.dataset.create(\n",
-    "    name=\"Census\",  # MUST BE UNIQUE. Throw Exception if already exist.\n",
-    "    path=\"./data/census/private.csv\",  # MUST EXIST\n",
-    "    mock_path=\"./data/census/mock.csv\",\n",
-    "    file_type=\"csv\",\n",
+    "    name=\"Census2\",  # MUST BE UNIQUE. Throw Exception if already exist.\n",
+    "    path=\"./data/census/private\",  # MUST EXIST\n",
+    "    mock_path=\"./data/census/mock\",\n",
     "    summary=\"Sample census dataset, 10 rows for mock and 10 rows for private\",\n",
     "    description_path=\"./data/census/README.md\",\n",
     ")\n",
@@ -143,9 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "pd.read_csv(census_data.get_private_path())"
+    "census_data.describe()"
    ]
   },
   {
@@ -155,7 +154,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "census_data.describe()"
+    "import pandas as pd\n",
+    "\n",
+    "pd.read_csv(census_data.get_private_path() / \"data.csv\")"
    ]
   },
   {
@@ -197,7 +198,6 @@
     "    name=\"MedMNIST\",  # MUST BE UNIQUE. Throw Exception if already exist.\n",
     "    path=\"./data/med_MNIST/private\",  # MUST EXIST\n",
     "    mock_path=\"./data/med_MNIST/mock\",\n",
-    "    file_type=\"jpeg\",\n",
     "    summary=\"Sample Medical MNIST dataset, 5 images for each class\",\n",
     "    description_path=\"./data/med_MNIST/README.md\",\n",
     ")\n",
