--- a/notebooks/dataset_ds.ipynb
+++ b/notebooks/dataset_ds.ipynb
@@ -17,9 +17,9 @@
    "source": [
     "from syft_rds.client.rds_client import init_session\n",
     "\n",
-    "HOST_EMAIL = \"khoa2@openmined.org\"\n",
-    "rds_client = init_session(HOST_EMAIL)\n",
-    "\n",
+    "HOST_EMAIL = \"khoa@openmined.org\"\n",
+    "CONFIG = \"~/.syftbox/config_stage_khoa2.json\"\n",
+    "rds_client = init_session(HOST_EMAIL, syftbox_client_config_path=CONFIG)\n",
     "print(f\"host: {rds_client.host}\")\n",
     "print(f\"me: {rds_client.email}\")\n",
     "print(f\"is admin?: {rds_client.is_admin}\")"
