fix do notebook

--- a/notebooks/dataset_do.ipynb
+++ b/notebooks/dataset_do.ipynb
@@ -87,7 +87,7 @@
    "outputs": [],
    "source": [
     "data = rds_client.dataset.create(\n",
-    "    name=\"Census2\",  # MUST BE UNIQUE. Throw Exception if already exist.\n",
+    "    name=\"Census\",  # MUST BE UNIQUE. Throw Exception if already exist.\n",
     "    path=\"./data/census/private\",  # MUST EXIST\n",
     "    mock_path=\"./data/census/mock\",\n",
     "    summary=\"Sample census dataset, 10 rows for mock and 10 rows for private\",\n",
