--- a/notebooks/dataset_do.ipynb
+++ b/notebooks/dataset_do.ipynb
@@ -114,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"{census_data.name = }\")"
+    "census_data.get_mock_path()"
    ]
   },
   {
@@ -124,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "census_data.get_mock_path()"
+    "census_data.describe()"
    ]
   },
   {
@@ -134,7 +134,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "census_data.get_private_path()"
+    "import pandas as pd\n",
+    "\n",
+    "pd.read_csv(census_data.get_mock_path() / \"data.csv\")"
    ]
   },
   {
@@ -144,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "census_data.describe()"
+    "census_data.get_readme_path()"
    ]
   },
   {
@@ -154,9 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "pd.read_csv(census_data.get_private_path() / \"data.csv\")"
+    "census_data.get_description()"
    ]
   },
   {
@@ -166,22 +166,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "census_data.get_readme_path()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "census_data.get_description()"
+    "census_data.get_private_path()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "14",
    "metadata": {},
    "source": [
     "### Second Dataset"
@@ -190,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,18 +208,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"{medMnist_data.name = }\")\n",
-    "print(f\"{medMnist_data.summary = }\")"
+    "medMnist_data.get_mock_path()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,11 +228,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!uv pip install matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from PIL import Image\n",
+    "\n",
+    "# show the first image\n",
+    "test_dir = medMnist_data.get_mock_path() / \"test\"\n",
+    "first_subdir = next(d for d in test_dir.iterdir() if d.is_dir())\n",
+    "first_jpeg = next(first_subdir.glob(\"*.jpeg\"))\n",
+    "img = np.asarray(Image.open(first_jpeg))\n",
+    "plt.imshow(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
-    "medMnist_data.get_mock_path()"
+    "medMnist_data.get_description()"
    ]
   },
   {
@@ -257,22 +266,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "22",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "!uv pip install matplotlib\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "from PIL import Image\n",
-    "\n",
-    "test_dir = medMnist_data.get_mock_path() / \"test\"\n",
-    "first_subdir = next(d for d in test_dir.iterdir() if d.is_dir())\n",
-    "first_jpeg = next(first_subdir.glob(\"*.jpeg\"))\n",
-    "img = np.asarray(Image.open(first_jpeg))\n",
-    "plt.imshow(img)"
+    "### Delete Dataset"
    ]
   },
   {
@@ -282,15 +280,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "medMnist_data.get_description()"
+    "rds_client.dataset.delete(name=\"Census\")"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "24",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Delete Dataset"
+    "rds_client.dataset.delete(name=\"MedMNIST\")"
    ]
   },
   {
@@ -299,9 +299,7 @@
    "id": "25",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "rds_client.dataset.delete(name=\"Census\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -309,9 +307,7 @@
    "id": "26",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "rds_client.dataset.delete(name=\"MedMNIST\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -341,22 +337,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "30",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": []
