some utility methods

--- a/notebooks/ds_submit_job.ipynb
+++ b/notebooks/ds_submit_job.ipynb
@@ -24,8 +24,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-03-05 11:44:45.335\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36msyft_rds.orchestra\u001b[0m:\u001b[36msetup_rds_stack\u001b[0m:\u001b[36m89\u001b[0m - \u001b[33m\u001b[1mUsing shared data directory for both clients. Any file permission checks will be skipped as both clients have access to the same files.\u001b[0m\n",
-      "\u001b[32m2025-03-05 11:44:45.339\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msyft_rds.orchestra\u001b[0m:\u001b[36msetup_rds_stack\u001b[0m:\u001b[36m112\u001b[0m - \u001b[1mLaunching mock RDS stack in /var/folders/6x/3xzhslqj2tx0sgx88x022qyw0000gp/T/rds_o1308ll1...\u001b[0m\n"
+      "\u001b[32m2025-03-05 12:39:50.067\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36msyft_rds.orchestra\u001b[0m:\u001b[36msetup_rds_stack\u001b[0m:\u001b[36m89\u001b[0m - \u001b[33m\u001b[1mUsing shared data directory for both clients. Any file permission checks will be skipped as both clients have access to the same files.\u001b[0m\n",
+      "\u001b[32m2025-03-05 12:39:50.072\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msyft_rds.orchestra\u001b[0m:\u001b[36msetup_rds_stack\u001b[0m:\u001b[36m112\u001b[0m - \u001b[1mLaunching mock RDS stack in /var/folders/6x/3xzhslqj2tx0sgx88x022qyw0000gp/T/rds_s72qvkj4...\u001b[0m\n"
      ]
     }
    ],
@@ -68,12 +68,12 @@
     "import os\n",
     "# make a mock dataset\n",
     "\n",
-    "os.makedirs(\"dataset-1/private\", exist_ok=True)\n",
-    "os.makedirs(\"dataset-1/mock\", exist_ok=True)\n",
-    "with open(\"dataset-1/private/data.csv\", \"w\") as f:\n",
+    "os.makedirs(\"data/dataset-1/private\", exist_ok=True)\n",
+    "os.makedirs(\"data/dataset-1/mock\", exist_ok=True)\n",
+    "with open(\"data/dataset-1/private/data.csv\", \"w\") as f:\n",
     "    f.write(\"-1,-2,-3\")\n",
     "\n",
-    "with open(\"dataset-1/mock/data.csv\", \"w\") as f:\n",
+    "with open(\"data/dataset-1/mock/data.csv\", \"w\") as f:\n",
     "    f.write(\"1,2,3\")\n"
    ]
   },
@@ -88,8 +88,8 @@
    "source": [
     "data = do_client.dataset.create(\n",
     "    name=\"dataset-1\",  # MUST BE UNIQUE. Throw Exception if already exist.\n",
-    "    path=\"/Users/azizwork/Workspace/rds/notebooks/dataset-1/private/\",  # MUST EXIST\n",
-    "    mock_path=\"/Users/azizwork/Workspace/rds/notebooks/dataset-1/mock/\",\n",
+    "    path=\"/Users/azizwork/Workspace/rds/notebooks/data/dataset-1/private/\",  # MUST EXIST\n",
+    "    mock_path=\"/Users/azizwork/Workspace/rds/notebooks/data/dataset-1/mock/\",\n",
     ")"
    ]
   },
@@ -105,9 +105,9 @@
      "data": {
       "text/plain": [
        "[Dataset\n",
-       "   uid: 482fbc77-45a7-4aeb-91f3-e83c9636e9d9\n",
-       "   created_at: 2025-03-05T10:44:50.030997Z\n",
-       "   updated_at: 2025-03-05T10:44:50.031001Z\n",
+       "   uid: 27ac4bcb-e13e-47b9-8e5d-d511f3a9e050\n",
+       "   created_at: 2025-03-05T11:39:50.126733Z\n",
+       "   updated_at: 2025-03-05T11:39:50.126737Z\n",
        "   name: dataset-1\n",
        "   private: syft://data_owner@test.openmined.org/private/datasets/dataset-1\n",
        "   mock: syft://data_owner@test.openmined.org/public/datasets/dataset-1\n",
@@ -147,9 +147,9 @@
      "data": {
       "text/plain": [
        "[Dataset\n",
-       "   uid: 482fbc77-45a7-4aeb-91f3-e83c9636e9d9\n",
-       "   created_at: 2025-03-05T10:44:50.030997Z\n",
-       "   updated_at: 2025-03-05T10:44:50.031001Z\n",
+       "   uid: 27ac4bcb-e13e-47b9-8e5d-d511f3a9e050\n",
+       "   created_at: 2025-03-05T11:39:50.126733Z\n",
+       "   updated_at: 2025-03-05T11:39:50.126737Z\n",
        "   name: dataset-1\n",
        "   private: syft://data_owner@test.openmined.org/private/datasets/dataset-1\n",
        "   mock: syft://data_owner@test.openmined.org/public/datasets/dataset-1\n",
@@ -178,7 +178,7 @@
     {
      "data": {
       "text/plain": [
-       "PosixPath('/private/var/folders/6x/3xzhslqj2tx0sgx88x022qyw0000gp/T/rds_o1308ll1/shared_client_dir/datasites/data_owner@test.openmined.org/public/datasets/dataset-1')"
+       "PosixPath('/private/var/folders/6x/3xzhslqj2tx0sgx88x022qyw0000gp/T/rds_s72qvkj4/shared_client_dir/datasites/data_owner@test.openmined.org/public/datasets/dataset-1')"
       ]
      },
      "execution_count": 8,
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "2dfa6cc1",
    "metadata": {
     "metadata": {}
@@ -211,7 +211,7 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "1913b77c",
    "metadata": {
     "metadata": {}
@@ -235,52 +235,177 @@
     "from syft_rds.utils.render_code_template import render_data_access_template\n",
     "\n",
     "\n",
-    "def init_code(dataset: Dataset, path: str) -> None:\n",
+    "def init_code(dataset: Dataset, path: str, overwrite: bool = False) -> None:\n",
     "    path_ = pathlib.Path(path)\n",
     "    if path_.suffix == \".py\":\n",
     "        path_.parent.mkdir(parents=True, exist_ok=True)\n",
     "    else:\n",
     "        raise ValueError(f\"Invalid file extension: {path_.suffix}, must be .py\")\n",
-    "    if path_.is_file():\n",
+    "    if path_.is_file() and not overwrite:\n",
     "        raise FileExistsError(f\"File {path} already exists\")\n",
-    "    code = render_data_access_template(dataset.get_mock_path().name)\n",
+    "    \n",
+    "    all_files = list(dataset.get_mock_path().glob(\"**/*\"))\n",
+    "    if len(all_files) != 1:\n",
+    "        raise ValueError(f\"Only one file is allowed in the dataset mock path, got {len(all_files)}\")\n",
+    "    \n",
+    "    code = render_data_access_template(all_files[0].name)\n",
     "    with open(path, \"w\") as f:\n",
     "        f.write(code)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "9de98a73",
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "init_code(dataset, \"/Users/azizwork/Workspace/rds/notebooks/data/code1.py\", overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f0fef0ee",
    "metadata": {
     "metadata": {}
    },
    "outputs": [
     {
-     "ename": "FileExistsError",
-     "evalue": "File /Users/azizwork/Workspace/rds/notebooks/code1.py already exists",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mFileExistsError\u001b[39m                           Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43minit_code\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdataset\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m/Users/azizwork/Workspace/rds/notebooks/code1.py\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 13\u001b[39m, in \u001b[36minit_code\u001b[39m\u001b[34m(dataset, path)\u001b[39m\n\u001b[32m     11\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mInvalid file extension: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpath_.suffix\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, must be .py\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m path_.is_file():\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileExistsError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mFile \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpath\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m already exists\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     14\u001b[39m code = render_data_access_template(dataset.get_mock_path().name)\n\u001b[32m     15\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(path, \u001b[33m\"\u001b[39m\u001b[33mw\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n",
-      "\u001b[31mFileExistsError\u001b[39m: File /Users/azizwork/Workspace/rds/notebooks/code1.py already exists"
-     ]
+     "data": {
+      "text/plain": [
+       "Job\n",
+       "  uid: 3d34b39c-964a-479f-b33b-b1381ceb9c3a\n",
+       "  created_at: 2025-03-05T11:39:50.503681Z\n",
+       "  updated_at: 2025-03-05T11:39:50.503682Z\n",
+       "  name: robust_matrix_n34u\n",
+       "  description: None\n",
+       "  runtime: python\n",
+       "  user_code_id: 51fcf974-7add-4239-951e-26a1d5fd2aa9\n",
+       "  tags: []\n",
+       "  user_metadata: {}\n",
+       "  status: pending_code_review\n",
+       "  error: no_error\n",
+       "  output_url: syft://data_owner@test.openmined.org/api_data/RDS/output/3d34b39c-964a-479f-b33b-b1381ceb9c3a\n",
+       "  dataset_name: dataset-1"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "init_code(dataset, \"/Users/azizwork/Workspace/rds/notebooks/code1.py\")"
+    "job = ds_client.jobs.submit(\n",
+    "    user_code_path=\"/Users/azizwork/Workspace/rds/notebooks/data/code1.py\",\n",
+    "    dataset_name = dataset.name\n",
+    ")\n",
+    "job\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f0fef0ee",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 13,
+   "id": "7658488c",
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080\">╭─────────────────────────────────────────────── </span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">Job Configuration</span><span style=\"color: #008080; text-decoration-color: #008080\"> ───────────────────────────────────────────────╮</span>\n",
+       "<span style=\"color: #008080; text-decoration-color: #008080\">│</span> <span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">Starting job</span>                                                                                                    <span style=\"color: #008080; text-decoration-color: #008080\">│</span>\n",
+       "<span style=\"color: #008080; text-decoration-color: #008080\">│</span> <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0; font-weight: bold\">Execution:</span> <span style=\"color: #008080; text-decoration-color: #008080\">python code1.py</span>                                                                                      <span style=\"color: #008080; text-decoration-color: #008080\">│</span>\n",
+       "<span style=\"color: #008080; text-decoration-color: #008080\">│</span> <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0; font-weight: bold\">Dataset:</span>                                                                                                        <span style=\"color: #008080; text-decoration-color: #008080\">│</span>\n",
+       "<span style=\"color: #008080; text-decoration-color: #008080\">│</span> <span style=\"color: #008080; text-decoration-color: #008080\">/private/var/folders/6x/3xzhslqj2tx0sgx88x022qyw0000gp/T/rds_s72qvkj4/shared_client_dir/datasites/data_owner@te</span> <span style=\"color: #008080; text-decoration-color: #008080\">│</span>\n",
+       "<span style=\"color: #008080; text-decoration-color: #008080\">│</span> <span style=\"color: #008080; text-decoration-color: #008080\">st.openmined.org/public/datasets/dataset-1</span> → <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">/data</span>                                                              <span style=\"color: #008080; text-decoration-color: #008080\">│</span>\n",
+       "<span style=\"color: #008080; text-decoration-color: #008080\">│</span> <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0; font-weight: bold\">Output:</span>   <span style=\"color: #008080; text-decoration-color: #008080\">robust_matrix_n34u/output</span> → <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">/output</span>                                                                   <span style=\"color: #008080; text-decoration-color: #008080\">│</span>\n",
+       "<span style=\"color: #008080; text-decoration-color: #008080\">│</span> <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0; font-weight: bold\">Timeout:</span>  <span style=\"color: #008080; text-decoration-color: #008080\">1s</span>                                                                                                    <span style=\"color: #008080; text-decoration-color: #008080\">│</span>\n",
+       "<span style=\"color: #008080; text-decoration-color: #008080\">╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[36m╭─\u001b[0m\u001b[36m──────────────────────────────────────────────\u001b[0m\u001b[36m \u001b[0m\u001b[1;36mJob Configuration\u001b[0m\u001b[36m \u001b[0m\u001b[36m──────────────────────────────────────────────\u001b[0m\u001b[36m─╮\u001b[0m\n",
+       "\u001b[36m│\u001b[0m \u001b[1;32mStarting job\u001b[0m                                                                                                    \u001b[36m│\u001b[0m\n",
+       "\u001b[36m│\u001b[0m \u001b[1;37mExecution:\u001b[0m \u001b[36mpython code1.py\u001b[0m                                                                                      \u001b[36m│\u001b[0m\n",
+       "\u001b[36m│\u001b[0m \u001b[1;37mDataset:\u001b[0m                                                                                                        \u001b[36m│\u001b[0m\n",
+       "\u001b[36m│\u001b[0m \u001b[36m/private/var/folders/6x/3xzhslqj2tx0sgx88x022qyw0000gp/T/rds_s72qvkj4/shared_client_dir/datasites/data_owner@te\u001b[0m \u001b[36m│\u001b[0m\n",
+       "\u001b[36m│\u001b[0m \u001b[36mst.openmined.org/public/datasets/dataset-1\u001b[0m → \u001b[2m/data\u001b[0m                                                              \u001b[36m│\u001b[0m\n",
+       "\u001b[36m│\u001b[0m \u001b[1;37mOutput:\u001b[0m   \u001b[36mrobust_matrix_n34u/output\u001b[0m → \u001b[2m/output\u001b[0m                                                                   \u001b[36m│\u001b[0m\n",
+       "\u001b[36m│\u001b[0m \u001b[1;37mTimeout:\u001b[0m  \u001b[36m1s\u001b[0m                                                                                                    \u001b[36m│\u001b[0m\n",
+       "\u001b[36m╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">Running job...</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1;36mRunning job\u001b[0m\u001b[1;36m...\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span>,<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">2</span>,<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">3</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1;36m1\u001b[0m,\u001b[1;36m2\u001b[0m,\u001b[1;36m3\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "<span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">Job completed successfully!</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\n",
+       "\u001b[1;32mJob completed successfully!\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ds_client.user_code"
+    "ds_client.run(job)"
    ]
   }
  ],
