--- a/notebooks/ds_submit_job.ipynb
+++ b/notebooks/ds_submit_job.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0",
    "metadata": {
     "metadata": {}
    },
    "outputs": [],
    "source": [
-    "from syft_rds.orchestra import setup_rds_stack"
+    "from syft_rds.orchestra import setup_rds_stack\n",
+    "from syft_rds import RDS_NOTEBOOKS_PATH"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "1",
    "metadata": {
     "metadata": {}
@@ -24,8 +25,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-03-05 12:39:50.067\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36msyft_rds.orchestra\u001b[0m:\u001b[36msetup_rds_stack\u001b[0m:\u001b[36m89\u001b[0m - \u001b[33m\u001b[1mUsing shared data directory for both clients. Any file permission checks will be skipped as both clients have access to the same files.\u001b[0m\n",
-      "\u001b[32m2025-03-05 12:39:50.072\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msyft_rds.orchestra\u001b[0m:\u001b[36msetup_rds_stack\u001b[0m:\u001b[36m112\u001b[0m - \u001b[1mLaunching mock RDS stack in /var/folders/6x/3xzhslqj2tx0sgx88x022qyw0000gp/T/rds_s72qvkj4...\u001b[0m\n"
+      "\u001b[32m2025-03-06 10:17:01.075\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36msyft_rds.orchestra\u001b[0m:\u001b[36msetup_rds_stack\u001b[0m:\u001b[36m89\u001b[0m - \u001b[33m\u001b[1mUsing shared data directory for both clients. Any file permission checks will be skipped as both clients have access to the same files.\u001b[0m\n",
+      "\u001b[32m2025-03-06 10:17:01.086\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msyft_rds.orchestra\u001b[0m:\u001b[36msetup_rds_stack\u001b[0m:\u001b[36m112\u001b[0m - \u001b[1mLaunching mock RDS stack in /var/folders/q1/ryq93kwj055dlbpngxv1c7z40000gn/T/rds_ctvy9jsu...\u001b[0m\n"
      ]
     }
    ],
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "2",
    "metadata": {
     "metadata": {}
@@ -58,28 +59,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "b868ad92",
-   "metadata": {
-    "metadata": {}
-   },
+   "execution_count": 9,
+   "id": "b22ed1c8",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "# make a mock dataset\n",
+    "private_path = RDS_NOTEBOOKS_PATH / \"data\" / \"dataset-1\" / \"private\"\n",
+    "mock_path = RDS_NOTEBOOKS_PATH / \"data\" / \"dataset-1\" / \"mock\"\n",
     "\n",
-    "os.makedirs(\"data/dataset-1/private\", exist_ok=True)\n",
-    "os.makedirs(\"data/dataset-1/mock\", exist_ok=True)\n",
-    "with open(\"data/dataset-1/private/data.csv\", \"w\") as f:\n",
+    "private_path.mkdir(parents=True, exist_ok=True)\n",
+    "mock_path.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "with open(RDS_NOTEBOOKS_PATH /\"data/dataset-1/private/data.csv\", \"w\") as f:\n",
     "    f.write(\"-1,-2,-3\")\n",
     "\n",
-    "with open(\"data/dataset-1/mock/data.csv\", \"w\") as f:\n",
+    "with open(RDS_NOTEBOOKS_PATH / \"data/dataset-1/mock/data.csv\", \"w\") as f:\n",
     "    f.write(\"1,2,3\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "6",
    "metadata": {
     "metadata": {}
@@ -88,14 +88,14 @@
    "source": [
     "data = do_client.dataset.create(\n",
     "    name=\"dataset-1\",  # MUST BE UNIQUE. Throw Exception if already exist.\n",
-    "    path=\"/Users/azizwork/Workspace/rds/notebooks/data/dataset-1/private/\",  # MUST EXIST\n",
-    "    mock_path=\"/Users/azizwork/Workspace/rds/notebooks/data/dataset-1/mock/\",\n",
+    "    path=private_path,  # MUST EXIST\n",
+    "    mock_path=mock_path,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "ed885a96",
    "metadata": {
     "metadata": {}
@@ -105,9 +105,9 @@
      "data": {
       "text/plain": [
        "[Dataset\n",
-       "   uid: 27ac4bcb-e13e-47b9-8e5d-d511f3a9e050\n",
-       "   created_at: 2025-03-05T11:39:50.126733Z\n",
-       "   updated_at: 2025-03-05T11:39:50.126737Z\n",
+       "   uid: d732ea50-7a7c-40d9-9642-a990db8788af\n",
+       "   created_at: 2025-03-06T09:18:23.923585Z\n",
+       "   updated_at: 2025-03-06T09:18:23.923595Z\n",
        "   name: dataset-1\n",
        "   private: syft://data_owner@test.openmined.org/private/datasets/dataset-1\n",
        "   mock: syft://data_owner@test.openmined.org/public/datasets/dataset-1\n",
@@ -116,7 +116,7 @@
        "   tags: []]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "f01bc8bd",
    "metadata": {
     "metadata": {}
@@ -147,9 +147,9 @@
      "data": {
       "text/plain": [
        "[Dataset\n",
-       "   uid: 27ac4bcb-e13e-47b9-8e5d-d511f3a9e050\n",
-       "   created_at: 2025-03-05T11:39:50.126733Z\n",
-       "   updated_at: 2025-03-05T11:39:50.126737Z\n",
+       "   uid: d732ea50-7a7c-40d9-9642-a990db8788af\n",
+       "   created_at: 2025-03-06T09:18:23.923585Z\n",
+       "   updated_at: 2025-03-06T09:18:23.923595Z\n",
        "   name: dataset-1\n",
        "   private: syft://data_owner@test.openmined.org/private/datasets/dataset-1\n",
        "   mock: syft://data_owner@test.openmined.org/public/datasets/dataset-1\n",
@@ -158,7 +158,7 @@
        "   tags: []]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "1e3187d3",
    "metadata": {
     "metadata": {}
@@ -178,21 +178,42 @@
     {
      "data": {
       "text/plain": [
-       "PosixPath('/private/var/folders/6x/3xzhslqj2tx0sgx88x022qyw0000gp/T/rds_s72qvkj4/shared_client_dir/datasites/data_owner@test.openmined.org/public/datasets/dataset-1')"
+       "PosixPath('/private/var/folders/q1/ryq93kwj055dlbpngxv1c7z40000gn/T/rds_ctvy9jsu/shared_client_dir/datasites/data_owner@test.openmined.org/public/datasets/dataset-1')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ds_client.dataset.get(\"dataset-1\").get_mock_path()"
+    "ds_client.dataset.get(\"dataset-1\").get_mock_path()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
+   "id": "7587c6e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('/private/var/folders/q1/ryq93kwj055dlbpngxv1c7z40000gn/T/rds_ctvy9jsu/shared_client_dir/datasites/data_owner@test.openmined.org/private/datasets/dataset-1')"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds_client.dataset.get(\"dataset-1\").get_private_path()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "2dfa6cc1",
    "metadata": {
     "metadata": {}
@@ -211,7 +232,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "id": "1913b77c",
    "metadata": {
     "metadata": {}
@@ -232,42 +253,52 @@
    "source": [
     "import pathlib\n",
     "from syft_rds.models.models import Dataset\n",
-    "from syft_rds.utils.render_code_template import render_data_access_template\n",
-    "\n",
-    "\n",
-    "def init_code(dataset: Dataset, path: str, overwrite: bool = False) -> None:\n",
-    "    path_ = pathlib.Path(path)\n",
-    "    if path_.suffix == \".py\":\n",
-    "        path_.parent.mkdir(parents=True, exist_ok=True)\n",
-    "    else:\n",
-    "        raise ValueError(f\"Invalid file extension: {path_.suffix}, must be .py\")\n",
-    "    if path_.is_file() and not overwrite:\n",
-    "        raise FileExistsError(f\"File {path} already exists\")\n",
-    "    \n",
-    "    all_files = list(dataset.get_mock_path().glob(\"**/*\"))\n",
-    "    if len(all_files) != 1:\n",
-    "        raise ValueError(f\"Only one file is allowed in the dataset mock path, got {len(all_files)}\")\n",
-    "    \n",
-    "    code = render_data_access_template(all_files[0].name)\n",
-    "    with open(path, \"w\") as f:\n",
-    "        f.write(code)\n"
+    "from syft_rds.utils.render_code_template import render_data_access_template"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
+   "id": "027b91fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_file = RDS_NOTEBOOKS_PATH / \"data\" / \"code1.py\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "id": "9de98a73",
    "metadata": {
     "metadata": {}
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing /Users/koen/workspace/rds/notebooks/data/code1.py\n"
+     ]
+    }
+   ],
    "source": [
-    "init_code(dataset, \"/Users/azizwork/Workspace/rds/notebooks/data/code1.py\", overwrite=True)"
+    "%%writefile {my_file}\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "DATA_DIR = os.environ[\"DATA_DIR\"]\n",
+    "OUTPUT_DIR = os.environ[\"OUTPUT_DIR\"]\n",
+    "\n",
+    "print(\"Hello, world!\")\n",
+    "\n",
+    "with open(os.path.join(OUTPUT_DIR, \"output.txt\"), \"w\") as f:\n",
+    "    f.write(\"ABC\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "id": "f0fef0ee",
    "metadata": {
     "metadata": {}
@@ -277,29 +308,29 @@
      "data": {
       "text/plain": [
        "Job\n",
-       "  uid: 3d34b39c-964a-479f-b33b-b1381ceb9c3a\n",
-       "  created_at: 2025-03-05T11:39:50.503681Z\n",
-       "  updated_at: 2025-03-05T11:39:50.503682Z\n",
-       "  name: robust_matrix_n34u\n",
+       "  uid: dd4521c1-cbe4-4363-a0eb-dfb009936ce4\n",
+       "  created_at: 2025-03-06T09:44:51.108507Z\n",
+       "  updated_at: 2025-03-06T09:44:51.108510Z\n",
+       "  name: robust_server_a1yh\n",
        "  description: None\n",
        "  runtime: python\n",
-       "  user_code_id: 51fcf974-7add-4239-951e-26a1d5fd2aa9\n",
+       "  user_code_id: f1c93094-73e1-4193-9c38-09277297ccbd\n",
        "  tags: []\n",
        "  user_metadata: {}\n",
        "  status: pending_code_review\n",
        "  error: no_error\n",
-       "  output_url: syft://data_owner@test.openmined.org/api_data/RDS/output/3d34b39c-964a-479f-b33b-b1381ceb9c3a\n",
+       "  output_url: syft://data_owner@test.openmined.org/api_data/RDS/output/dd4521c1-cbe4-4363-a0eb-dfb009936ce4\n",
        "  dataset_name: dataset-1"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "job = ds_client.jobs.submit(\n",
-    "    user_code_path=\"/Users/azizwork/Workspace/rds/notebooks/data/code1.py\",\n",
+    "    user_code_path=my_file,\n",
     "    dataset_name = dataset.name\n",
     ")\n",
     "job\n"
@@ -307,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "id": "7658488c",
    "metadata": {
     "metadata": {}
@@ -320,9 +351,9 @@
        "<span style=\"color: #008080; text-decoration-color: #008080\">│</span> <span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">Starting job</span>                                                                                                    <span style=\"color: #008080; text-decoration-color: #008080\">│</span>\n",
        "<span style=\"color: #008080; text-decoration-color: #008080\">│</span> <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0; font-weight: bold\">Execution:</span> <span style=\"color: #008080; text-decoration-color: #008080\">python code1.py</span>                                                                                      <span style=\"color: #008080; text-decoration-color: #008080\">│</span>\n",
        "<span style=\"color: #008080; text-decoration-color: #008080\">│</span> <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0; font-weight: bold\">Dataset:</span>                                                                                                        <span style=\"color: #008080; text-decoration-color: #008080\">│</span>\n",
-       "<span style=\"color: #008080; text-decoration-color: #008080\">│</span> <span style=\"color: #008080; text-decoration-color: #008080\">/private/var/folders/6x/3xzhslqj2tx0sgx88x022qyw0000gp/T/rds_s72qvkj4/shared_client_dir/datasites/data_owner@te</span> <span style=\"color: #008080; text-decoration-color: #008080\">│</span>\n",
+       "<span style=\"color: #008080; text-decoration-color: #008080\">│</span> <span style=\"color: #008080; text-decoration-color: #008080\">/private/var/folders/q1/ryq93kwj055dlbpngxv1c7z40000gn/T/rds_ctvy9jsu/shared_client_dir/datasites/data_owner@te</span> <span style=\"color: #008080; text-decoration-color: #008080\">│</span>\n",
        "<span style=\"color: #008080; text-decoration-color: #008080\">│</span> <span style=\"color: #008080; text-decoration-color: #008080\">st.openmined.org/public/datasets/dataset-1</span> → <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">/data</span>                                                              <span style=\"color: #008080; text-decoration-color: #008080\">│</span>\n",
-       "<span style=\"color: #008080; text-decoration-color: #008080\">│</span> <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0; font-weight: bold\">Output:</span>   <span style=\"color: #008080; text-decoration-color: #008080\">robust_matrix_n34u/output</span> → <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">/output</span>                                                                   <span style=\"color: #008080; text-decoration-color: #008080\">│</span>\n",
+       "<span style=\"color: #008080; text-decoration-color: #008080\">│</span> <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0; font-weight: bold\">Output:</span>   <span style=\"color: #008080; text-decoration-color: #008080\">robust_server_a1yh/output</span> → <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">/output</span>                                                                   <span style=\"color: #008080; text-decoration-color: #008080\">│</span>\n",
        "<span style=\"color: #008080; text-decoration-color: #008080\">│</span> <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0; font-weight: bold\">Timeout:</span>  <span style=\"color: #008080; text-decoration-color: #008080\">1s</span>                                                                                                    <span style=\"color: #008080; text-decoration-color: #008080\">│</span>\n",
        "<span style=\"color: #008080; text-decoration-color: #008080\">╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯</span>\n",
        "</pre>\n"
@@ -332,9 +363,9 @@
        "\u001b[36m│\u001b[0m \u001b[1;32mStarting job\u001b[0m                                                                                                    \u001b[36m│\u001b[0m\n",
        "\u001b[36m│\u001b[0m \u001b[1;37mExecution:\u001b[0m \u001b[36mpython code1.py\u001b[0m                                                                                      \u001b[36m│\u001b[0m\n",
        "\u001b[36m│\u001b[0m \u001b[1;37mDataset:\u001b[0m                                                                                                        \u001b[36m│\u001b[0m\n",
-       "\u001b[36m│\u001b[0m \u001b[36m/private/var/folders/6x/3xzhslqj2tx0sgx88x022qyw0000gp/T/rds_s72qvkj4/shared_client_dir/datasites/data_owner@te\u001b[0m \u001b[36m│\u001b[0m\n",
+       "\u001b[36m│\u001b[0m \u001b[36m/private/var/folders/q1/ryq93kwj055dlbpngxv1c7z40000gn/T/rds_ctvy9jsu/shared_client_dir/datasites/data_owner@te\u001b[0m \u001b[36m│\u001b[0m\n",
        "\u001b[36m│\u001b[0m \u001b[36mst.openmined.org/public/datasets/dataset-1\u001b[0m → \u001b[2m/data\u001b[0m                                                              \u001b[36m│\u001b[0m\n",
-       "\u001b[36m│\u001b[0m \u001b[1;37mOutput:\u001b[0m   \u001b[36mrobust_matrix_n34u/output\u001b[0m → \u001b[2m/output\u001b[0m                                                                   \u001b[36m│\u001b[0m\n",
+       "\u001b[36m│\u001b[0m \u001b[1;37mOutput:\u001b[0m   \u001b[36mrobust_server_a1yh/output\u001b[0m → \u001b[2m/output\u001b[0m                                                                   \u001b[36m│\u001b[0m\n",
        "\u001b[36m│\u001b[0m \u001b[1;37mTimeout:\u001b[0m  \u001b[36m1s\u001b[0m                                                                                                    \u001b[36m│\u001b[0m\n",
        "\u001b[36m╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n"
       ]
@@ -357,12 +388,26 @@
     },
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "513febef39154fc39590019264601bbb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span>,<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">2</span>,<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">3</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Hello, world!\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1;36m1\u001b[0m,\u001b[1;36m2\u001b[0m,\u001b[1;36m3\u001b[0m\n"
+       "Hello, world!\n"
       ]
      },
      "metadata": {},
@@ -399,7 +444,7 @@
        "0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,6 +452,14 @@
    "source": [
     "ds_client.run(job)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "586f85d3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
